--- a/index.html
+++ b/index.html
@@ -50,16 +50,6 @@
       <span aria-hidden="true"></span>
     </a>
   </div>
-  <div class="navbar-menu">
-    <div class="navbar-start" style="flex-grow: 1; justify-content: center;">
-      <a class="navbar-item" href="https://keunhong.com">
-      <span class="icon">
-          <i class="fas fa-home"></i>
-      </span>
-      </a>
-    </div>
-
-  </div>
 </nav>
 
 
@@ -71,23 +61,17 @@
           <h1 class="title is-1 publication-title">MVPSNet: Fast Generalizable Multi-view Photometric Stereo</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://keunhong.com">Keunhong Park</a><sup>1</sup>,</span>
+              <a href="">Dongxu Zhao</a><sup>1</sup>,</span>
             <span class="author-block">
               <a href="http://www.cs.umd.edu/~dlichy/">Daniel Lichy</a><sup>2</sup>,</span>
             <span class="author-block">
-              <a href="https://jonbarron.info">Jonathan T. Barron</a><sup>2</sup>,
+              <a href="">Pierre-Nicolas Perrin</a><sup>2</sup>,
             </span>
             <span class="author-block">
-              <a href="http://sofienbouaziz.com">Sofien Bouaziz</a><sup>2</sup>,
+              <a href="https://cs.unc.edu/person/jan-michael-frahm/">Jan-Mihchael Frahm</a><sup>2</sup>,
             </span>
             <span class="author-block">
-              <a href="https://www.danbgoldman.com">Dan B Goldman</a><sup>2</sup>,
-            </span>
-            <span class="author-block">
-              <a href="https://homes.cs.washington.edu/~seitz/">Steven M. Seitz</a><sup>1,2</sup>,
-            </span>
-            <span class="author-block">
-              <a href="http://www.ricardomartinbrualla.com">Ricardo Martin-Brualla</a><sup>2</sup>
+              <a href="https://www.cs.unc.edu/~ronisen/">Soumyadip (Roni) Sengupta</a><sup>2</sup>,
             </span>
           </div>
 
