--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
             <span class="author-block">
               <a href="http://www.cs.umd.edu/~dlichy/">Daniel Lichy</a><sup>2</sup>,</span>
             <span class="author-block">
-              <a href="">Pierre-Nicolas Perrin</a><sup>2</sup>,
+              <a href="">Pierre-Nicolas Perrin</a><sup>1</sup>,
             </span>
             <span class="author-block">
-              <a href="https://cs.unc.edu/person/jan-michael-frahm/">Jan-Mihchael Frahm</a><sup>2</sup>,
+              <a href="https://cs.unc.edu/person/jan-michael-frahm/">Jan-Mihchael Frahm</a><sup>1</sup>,
             </span>
             <span class="author-block">
-              <a href="https://www.cs.unc.edu/~ronisen/">Soumyadip (Roni) Sengupta</a><sup>2</sup>,
+              <a href="https://www.cs.unc.edu/~ronisen/">Soumyadip (Roni) Sengupta</a><sup>1</sup>,
             </span>
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>University of Washington,</span>
-            <span class="author-block"><sup>2</sup>Google Research</span>
+            <span class="author-block"><sup>1</sup>University of North Carolina at Chapel Hill,</span>
+            <span class="author-block"><sup>2</sup>University of Maryland, College Park</span>
           </div>
 
           <div class="column has-text-centered">
