--- a/index.html
+++ b/index.html
@@ -408,11 +408,12 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{park2021nerfies,
-  author    = {Park, Keunhong and Sinha, Utkarsh and Barron, Jonathan T. and Bouaziz, Sofien and Goldman, Dan B and Seitz, Steven M. and Martin-Brualla, Ricardo},
-  title     = {Nerfies: Deformable Neural Radiance Fields},
-  journal   = {ICCV},
-  year      = {2021},
+    <pre><code>@article{zhao2023mvpsnet,
+  title={MVPSNet: Fast Generalizable Multi-view Photometric Stereo},
+  author={Zhao, Dongxu and Lichy, Daniel and Perrin, Pierre-Nicolas and Frahm, Jan-Michael and Sengupta, Soumyadip},
+  journal={arXiv preprint arXiv:2305.11167},
+  year={2023},
+}
 }</code></pre>
   </div>
 </section>
