--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
-                  <span>Code</span>
+                  <span>Code(Coming Soon)</span>
                   </a>
               </span>
               <!-- Dataset Link. -->
@@ -109,7 +109,7 @@
                   <span class="icon">
                       <i class="far fa-images"></i>
                   </span>
-                  <span>Data</span>
+                  <span>Data(Coming Soon)</span>
                   </a>
             </div>
 
