--- a/index.html
+++ b/index.html
@@ -203,31 +203,16 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            We present the first method capable of photorealistically reconstructing a non-rigidly
-            deforming scene using photos/videos captured casually from mobile phones.
-          </p>
-          <p>
-            Our approach augments neural radiance fields
-            (NeRF) by optimizing an
-            additional continuous volumetric deformation field that warps each observed point into a
-            canonical 5D NeRF.
-            We observe that these NeRF-like deformation fields are prone to local minima, and
-            propose a coarse-to-fine optimization method for coordinate-based models that allows for
-            more robust optimization.
-            By adapting principles from geometry processing and physical simulation to NeRF-like
-            models, we propose an elastic regularization of the deformation field that further
-            improves robustness.
-          </p>
-          <p>
-            We show that <span class="dnerf">Nerfies</span> can turn casually captured selfie
-            photos/videos into deformable NeRF
-            models that allow for photorealistic renderings of the subject from arbitrary
-            viewpoints, which we dub <i>"nerfies"</i>. We evaluate our method by collecting data
-            using a
-            rig with two mobile phones that take time-synchronized photos, yielding train/validation
-            images of the same pose at different viewpoints. We show that our method faithfully
-            reconstructs non-rigidly deforming scenes and reproduces unseen views with high
-            fidelity.
+            We propose a fast and generalizable solution to Multi-view Photometric Stereo (MVPS), 
+            called MVPSNet. The key to our approach is a feature extraction network that effectively 
+            combines images from the same view captured under multiple lighting conditions to extract 
+            geometric features from shading cues for stereo matching. We demonstrate these features, 
+            termed  `Light Aggregated Feature Maps' (LAFM), are effective for feature matching even in 
+            textureless regions, where traditional multi-view stereo methods fail. Our method produces 
+            similar reconstruction results to PS-NeRF, a state-of-the-art MVPS method that optimizes a 
+            neural network per-scene, while being 411$\times$ faster (105 seconds vs. 12 hours) in inference. 
+            Additionally, we introduce a new synthetic dataset for MVPS, sMVPS, which is shown to be effective 
+            to train a generalizable MVPS method.
           </p>
         </div>
       </div>
