--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@ unc<!DOCTYPE html>
             called MVPSNet. The key to our approach is a feature extraction network that effectively 
             combines images from the same view captured under multiple lighting conditions to extract 
             geometric features from shading cues for stereo matching. We demonstrate these features, 
-            termed  `Light Aggregated Feature Maps' (LAFM), are effective for feature matching even in 
+            termed 'Light Aggregated Feature Maps' (LAFM), are effective for feature matching even in 
             textureless regions, where traditional multi-view stereo methods fail. Our method produces 
             similar reconstruction results to PS-NeRF, a state-of-the-art MVPS method that optimizes a 
-            neural network per-scene, while being 411$\times$ faster (105 seconds vs. 12 hours) in inference. 
+            neural network per-scene, while being 411x faster (105 seconds vs. 12 hours) in inference. 
             Additionally, we introduce a new synthetic dataset for MVPS, sMVPS, which is shown to be effective 
             to train a generalizable MVPS method.
           </p>
