--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@ unc<!DOCTYPE html>
         <br/>
         <!--/ Interpolating. -->
 
-        <!-- Re-rendering. -->
-        <h3 class="title is-4">Re-rendering the input video</h3>
+        <!-- Real-world capture -->
+        <h3 class="title is-4">Result on real-world capture</h3>
         <div class="content has-text-justified">
           <p>
             Using <span class="dnerf">Nerfies</span>, you can re-render a video from a novel
@@ -258,7 +258,7 @@ unc<!DOCTYPE html>
                  preload
                  playsinline
                  width="75%">
-            <source src="./static/videos/replay.mp4"
+            <source src="./static/videos/twitter_iccv23_demo2.mp4"
                     type="video/mp4">
           </video>
         </div>
