--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@
       </div>
       <!--/ Visual Effects. -->
 
-      <!-- Matting. -->
+      <!-- Real-world capture. -->
       <div class="column">
-        <h2 class="title is-3">Matting</h2>
+        <h2 class="title is-3">Result on real-world capture</h2>
         <div class="columns is-centered">
           <div class="column content">
             <p>
@@ -194,7 +194,7 @@
               samples that fall outside of a bounding box during rendering.
             </p>
             <video id="matting-video" controls playsinline height="100%">
-              <source src="./static/videos/matting.mp4"
+              <source src="./static/videos/twitter_iccv23_demo2.mp4"
                       type="video/mp4">
             </video>
           </div>
@@ -202,7 +202,7 @@
         </div>
       </div>
     </div>
-    <!--/ Matting. -->
+    <!--/ Real-world capture. -->
 
     <!-- Real-world capture -->
     <div class="columns is-centered">
