--- a/index.html
+++ b/index.html
@@ -179,27 +179,7 @@
           <img src="./static/images/fig3_experiment.png">
         </div>
       </div>
-      <!--/ Visual Effects. -->
-
-      <!-- Real-world capture. -->
-      <div class="column">
-        <h2 class="title is-3">Result on real-world capture</h2>
-        <div class="columns is-centered">
-          <div class="column content">
-            <p>
-              As a byproduct of our method, we can also solve the matting problem by ignoring
-              samples that fall outside of a bounding box during rendering.
-            </p>
-            <video id="matting-video" controls playsinline height="100%">
-              <source src="./static/videos/twitter_iccv23_demo2.mp4"
-                      type="video/mp4">
-            </video>
-          </div>
-
-        </div>
-      </div>
-    </div>
-    <!--/ Real-world capture. -->
+      <!--/ Diligent-MV. -->
 
     <!-- Real-world capture -->
     <div class="columns is-centered">
