--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
-        <span class="dnerf">MVPSNet</span> achieves similar result as STOA method without per-scene optimization.
+        MVPSNet achieves similar result as STOA method without per-scene optimization.
       </h2>
     </div>
   </div>
