--- a/index.html
+++ b/index.html
@@ -174,7 +174,8 @@
             Using <i>nerfies</i> you can create fun visual effects. This Dolly zoom effect
             would be impossible without nerfies since it would require going through a wall.
           </p>
-          <img src="./static/images/fig3_experiment.png">
+          <img src="./static/images/fig3_experiment.png"
+            width="75%">>
         </div>
       </div>
       <!--/ Diligent-MV. -->
