--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
         <h3 class="title is-3">Result on real-world capture</h3>
         <div class="content has-text-justified">
           <p>
-            Using <span class="dnerf">Nerfies</span>, you can re-render a video from a novel
-            viewpoint such as a stabilized camera by playing back the training deformations.
+            A user captures MVPS imagery by attaching a flash-light with a string to the tripod to move lights in a circle
+            around the camera.
           </p>
         </div>
         <div class="content has-text-centered">
