--- a/index.html
+++ b/index.html
@@ -171,8 +171,7 @@
         <div class="content">
           <h2 class="title is-3">Results on DiLiGent-MV</h2>
           <p>
-            Using <i>nerfies</i> you can create fun visual effects. This Dolly zoom effect
-            would be impossible without nerfies since it would require going through a wall.
+            Comparison with other methods.
           </p>
           <img src="./static/images/fig3_experiment.png"
             width="75%">>
