--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             Comparison with other methods.
           </p>
           <img src="./static/images/fig3_experiment.png"
-            width="75%">>
+            width="75%">
         </div>
       </div>
       <!--/ Diligent-MV. -->
