--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
     <div class="columns is-centered">
 
-    <!-- Diligent-MV. -->
+<!--     Diligent-MV. -->
     <div class="column">
       <div class="content">
         <h2 class="title is-3">Results on DiLiGent-MV</h2>
@@ -178,6 +178,21 @@
       </div>
     </div>
     <!--/ Diligent-MV. -->
+    <!-- Visual Effects. -->
+      <div class="column">
+        <div class="content">
+          <h2 class="title is-3">Visual Effects</h2>
+          <p>
+            Using <i>nerfies</i> you can create fun visual effects. This Dolly zoom effect
+            would be impossible without nerfies since it would require going through a wall.
+          </p>
+          <video id="dollyzoom" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/dollyzoom-stacked.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+      </div>
+      <!--/ Visual Effects. -->
 
     <!-- Real-world capture -->
     <div class="columns is-centered">
