--- a/index.html
+++ b/index.html
@@ -166,8 +166,7 @@
 
     <div class="columns is-centered">
 
-
-    <!-- Visual Effects. -->
+      <!-- Visual Effects. -->
       <div class="column">
         <div class="content">
           <h2 class="title is-3">Visual Effects</h2>
@@ -183,35 +182,27 @@
       </div>
       <!--/ Visual Effects. -->
 
-    <!-- Real-world capture -->
-    <div class="columns is-centered">
-      <div class="column is-full-width">      
-        <h3 class="title is-3">Result on real-world capture</h3>
-        <div class="content has-text-justified">
-          <p>
-            A user captures MVPS imagery by attaching a flash-light with a string to the tripod to move lights in a circle
-            around the camera.
-          </p>
-        </div>
-        <div class="content has-text-centered">
-          <video id="replay-video"
-                 controls
-                 muted
-                 preload
-                 playsinline
-                 width="25%">
-            <source src="./static/videos/twitter_iccv23_demo2.mp4"
-                    type="video/mp4">
-          </video>
-        </div>
-      
+      <!-- Matting. -->
+      <div class="column">
+        <h2 class="title is-3">Matting</h2>
+        <div class="columns is-centered">
+          <div class="column content">
+            <p>
+              As a byproduct of our method, we can also solve the matting problem by ignoring
+              samples that fall outside of a bounding box during rendering.
+            </p>
+            <video id="matting-video" controls playsinline height="100%">
+              <source src="./static/videos/matting.mp4"
+                      type="video/mp4">
+            </video>
+          </div>
 
+        </div>
       </div>
     </div>
-    <!--/ Real-world capture -->
+    <!--/ Matting. -->
   </div>
 </section>
-
 
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
