--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
               samples that fall outside of a bounding box during rendering.
             </p>
             <video id="matting-video" controls playsinline height="100%">
-              <source src="./static/videos/matting.mp4"
+              <source src="./static/videos/fig3_experiment.png"
                       type="video/mp4">
             </video>
           </div>
