--- a/index.html
+++ b/index.html
@@ -174,10 +174,13 @@
             Using <i>nerfies</i> you can create fun visual effects. This Dolly zoom effect
             would be impossible without nerfies since it would require going through a wall.
           </p>
-          <video id="dollyzoom" autoplay controls muted loop playsinline height="100%">
+<!--           <video id="dollyzoom" autoplay controls muted loop playsinline height="100%">
             <source src="./static/videos/dollyzoom-stacked.mp4"
                     type="video/mp4">
-          </video>
+          </video> -->
+           <img src="./static/images/fig3_experiment.png"
+                 class="interpolation-image"
+                 alt="Interpolate start reference image."/>
         </div>
       </div>
       <!--/ Visual Effects. -->
