--- a/index.html
+++ b/index.html
@@ -185,14 +185,15 @@
       </div>
       <!--/ Visual Effects. -->
 
-      <!-- Matting. -->
+      <!-- Real-world capture. -->
       <div class="column">
         <h2 class="title is-3">Matting</h2>
         <div class="columns is-centered">
           <div class="column content">
             <p>
-              As a byproduct of our method, we can also solve the matting problem by ignoring
-              samples that fall outside of a bounding box during rendering.
+              Result of a real-world capture using a simple at-home setup: 
+              a user captures MVPS imagery by attaching a flash-light with 
+              a string to the tripod to move lights in a circle around the camera. 
             </p>
             <video id="matting-video" controls playsinline height="100%">
               <source src="./static/videos/twitter_iccv23_demo2.mp4"
