--- a/index.html
+++ b/index.html
@@ -166,24 +166,19 @@
 
     <div class="columns is-centered">
 
-      <!-- Visual Effects. -->
+      <!-- DeLiGenT-MV results. -->
       <div class="column">
         <div class="content">
-          <h2 class="title is-3">Visual Effects</h2>
+          <h2 class="title is-3">DeLiGenT-MV results</h2>
           <p>
-            Using <i>nerfies</i> you can create fun visual effects. This Dolly zoom effect
-            would be impossible without nerfies since it would require going through a wall.
+            MVPSNet achieves comparable results to STOA method while being able to generalize to .
           </p>
-<!--           <video id="dollyzoom" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/dollyzoom-stacked.mp4"
-                    type="video/mp4">
-          </video> -->
            <img src="./static/images/fig3_experiment.png"
                  class="interpolation-image"
                  alt="Interpolate start reference image."/>
         </div>
       </div>
-      <!--/ Visual Effects. -->
+      <!--/ DeLiGenT-MV results. -->
 
       <!-- Real-world capture. -->
       <div class="column">
@@ -195,7 +190,7 @@
               a user captures MVPS imagery by attaching a flash-light with 
               a string to the tripod to move lights in a circle around the camera. 
             </p>
-            <video id="matting-video" controls playsinline height="100%">
+            <video id="demo2" controls playsinline height="100%">
               <source src="./static/videos/twitter_iccv23_demo2.mp4"
                       type="video/mp4">
             </video>
@@ -204,7 +199,7 @@
         </div>
       </div>
     </div>
-    <!--/ Matting. -->
+    <!--/ Real-world capture. -->
   </div>
 </section>
 
