--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <div class="content">
           <h2 class="title is-3">DeLiGenT-MV results</h2>
           <p>
-            MVPSNet achieves comparable results to STOA method while being able to generalize to .
+            MVPSNet achieves comparable results to STOA method while being fast and generalizable.
           </p>
            <img src="./static/images/fig3_experiment.png"
                  class="interpolation-image"
@@ -218,15 +218,6 @@
 
 <footer class="footer">
   <div class="container">
-<!--     <div class="content has-text-centered">
-      <a class="icon-link"
-         href="./static/videos/nerfies_paper.pdf">
-        <i class="fas fa-file-pdf"></i>
-      </a>
-      <a class="icon-link" href="https://github.com/keunhong" class="external-link" disabled>
-        <i class="fab fa-github"></i>
-      </a>
-    </div> -->
     <div class="columns is-centered">
       <div class="column is-8">
         <div class="content">
