--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
       <!-- Real-world capture. -->
       <div class="column">
-        <h2 class="title is-3">Matting</h2>
+        <h2 class="title is-3">Result on real-world capture</h2>
         <div class="columns is-centered">
           <div class="column content">
             <p>
