--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         content="MVPSNet: Fast Generalizable Multi-view Photometric Stereo">
   <meta name="keywords" content="Multi-view Stereo, Photometric Stereo">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>MVPSNet: Fast Generalizable Multi-view Photometric Stereo</title>
+  <title>MVPSNet: Fast Generalizable Multi-view Photometric Stereo (ICCV2023)</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
@@ -128,7 +128,7 @@
                 type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
-        MVPSNet achieves similar result as STOA method without per-scene optimization.
+        MVPSNet achieves similar result as SOTA method (PS-NeRF) without per-scene optimization.
       </h2>
     </div>
   </div>
@@ -190,7 +190,7 @@
               a user captures MVPS imagery by attaching a flash-light with 
               a string to the tripod to move lights in a circle around the camera. 
             </p>
-            <video id="demo2" controls playsinline height="100%">
+            <video id="demo2" autoplay controls playsinline height="100%">
               <source src="./static/videos/twitter_iccv23_demo2.mp4"
                       type="video/mp4">
             </video>
