--- a/index.html
+++ b/index.html
@@ -160,8 +160,57 @@
   </div>
 </section>
 
-
 <section class="section">
+  <div class="container is-max-desktop">
+    <!-- Results -->
+    <div class="columns is-centered">
+      <div class="column is-full-width">
+        <h2 class="title is-3">Results</h2>
+
+        <!-- DeLiGenT-MV results. -->
+        <h3 class="title is-4">DeLiGenT-MV results.</h3>
+        <div class="content has-text-justified">
+          <p>
+            MVPSNet achieves comparable results to STOA method while being fast and generalizable.
+          </p>
+        </div>
+          <img src="./static/images/fig3_experiment.png"
+                   class="interpolation-image"
+                   alt="Interpolate start reference image."/>
+        </div>
+        <br/>
+        <!--/ DeLiGenT-MV results. -->
+
+        <!-- Re-rendering. -->
+        <h3 class="title is-4">Re-rendering the input video</h3>
+        <div class="content has-text-justified">
+          <p>
+            Using <span class="dnerf">Nerfies</span>, you can re-render a video from a novel
+            viewpoint such as a stabilized camera by playing back the training deformations.
+          </p>
+        </div>
+        <div class="content has-text-centered">
+          <video id="replay-video"
+                 controls
+                 muted
+                 preload
+                 playsinline
+                 width="75%">
+            <source src="./static/videos/replay.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <!--/ Re-rendering. -->
+
+      </div>
+    </div>
+    <!--/ Animation. -->
+
+</div>
+</section>
+
+
+<!-- <section class="section">
   <div class="container is-max-desktop">
 
     <div class="columns is-centered">
@@ -202,7 +251,7 @@
     <!--/ Real-world capture. -->
   </div>
 </section>
-
+ -->
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
