--- a/index.html
+++ b/index.html
@@ -159,27 +159,46 @@
     <!--/ Abstract. -->
   </div>
 </section>
-
 <section class="section">
   <div class="container is-max-desktop">
-    <!-- Results -->
+    <!-- Results. -->
     <div class="columns is-centered">
       <div class="column is-full-width">
         <h2 class="title is-3">Results</h2>
 
-        <!-- DeLiGenT-MV results. -->
-        <h3 class="title is-4">DeLiGenT-MV results.</h3>
+        <!-- Interpolating. -->
+        <h3 class="title is-4">Interpolating states</h3>
         <div class="content has-text-justified">
           <p>
-            MVPSNet achieves comparable results to STOA method while being fast and generalizable.
+            We can also animate the scene by interpolating the deformation latent codes of two input
+            frames. Use the slider here to linearly interpolate between the left frame and the right
+            frame.
           </p>
         </div>
-          <img src="./static/images/fig3_experiment.png"
-                   class="interpolation-image"
-                   alt="Interpolate start reference image."/>
+        <div class="columns is-vcentered interpolation-panel">
+          <div class="column is-3 has-text-centered">
+            <img src="./static/images/interpolate_start.jpg"
+                 class="interpolation-image"
+                 alt="Interpolate start reference image."/>
+            <p>Start Frame</p>
+          </div>
+          <div class="column interpolation-video-column">
+            <div id="interpolation-image-wrapper">
+              Loading...
+            </div>
+            <input class="slider is-fullwidth is-large is-info"
+                   id="interpolation-slider"
+                   step="1" min="0" max="100" value="0" type="range">
+          </div>
+          <div class="column is-3 has-text-centered">
+            <img src="./static/images/interpolate_end.jpg"
+                 class="interpolation-image"
+                 alt="Interpolation end reference image."/>
+            <p class="is-bold">End Frame</p>
+          </div>
         </div>
         <br/>
-        <!--/ DeLiGenT-MV results. -->
+        <!--/ Interpolating. -->
 
         <!-- Re-rendering. -->
         <h3 class="title is-4">Re-rendering the input video</h3>
@@ -204,11 +223,10 @@
 
       </div>
     </div>
-    <!--/ Animation. -->
+    <!--/ Results. -->
 
-</div>
+  </div>
 </section>
-
 
 <!-- <section class="section">
   <div class="container is-max-desktop">
