--- a/index.html
+++ b/index.html
@@ -177,18 +177,21 @@
                  class="interpolation-image"
                  alt="Interpolate start reference image."/>
         <br/>
-        <!--/ Interpolating. -->
+        <!--/ Results on DiLiGenT-MV. -->
 
-        <!-- Re-rendering. -->
+        <!-- Result on real-world capture. -->
         <h3 class="title is-4">Re-rendering the input video</h3>
         <div class="content has-text-justified">
           <p>
-            Using <span class="dnerf">Nerfies</span>, you can re-render a video from a novel
-            viewpoint such as a stabilized camera by playing back the training deformations.
+            Result of a real-world capture using a simple at-home setup: 
+            a user captures MVPS imagery by attaching a flash-light with 
+            a string to the tripod to move lights in a circle around the 
+            camera.
           </p>
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
+                 autoplay
                  controls
                  muted
                  preload
@@ -198,7 +201,7 @@
                     type="video/mp4">
           </video>
         </div>
-        <!--/ Re-rendering. -->
+        <!--/ Result on real-world capture. -->
 
       </div>
     </div>
