--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <h2 class="title is-3">Results</h2>
 
         <!-- Results on DiLiGenT-MV. -->
-        <h3 class="title is-4">Interpolating states</h3>
+        <h3 class="title is-4">Results on DiLiGenT-MV</h3>
         <div class="content has-text-justified">
           <p>
             MVPSNet achieves comparable results to STOA method while being fast and generalizable.
