--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <!--/ Results on DiLiGenT-MV. -->
 
         <!-- Result on real-world capture. -->
-        <h3 class="title is-4">Re-rendering the input video</h3>
+        <h3 class="title is-4">Result on real-world capture</h3>
         <div class="content has-text-justified">
           <p>
             Result of a real-world capture using a simple at-home setup: 
@@ -197,7 +197,7 @@
                  preload
                  playsinline
                  width="75%">
-            <source src="./static/videos/replay.mp4"
+            <source src="./static/videos/twitter_iccv23_demo2.mp4"
                     type="video/mp4">
           </video>
         </div>
