--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         content="MVPSNet: Fast Generalizable Multi-view Photometric Stereo">
   <meta name="keywords" content="Multi-view Stereo, Photometric Stereo">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>MVPSNet: Fast Generalizable Multi-view Photometric Stereo (ICCV2023)</title>
+  <title>MVPSNet: Fast Generalizable Multi-view Photometric Stereo</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
@@ -59,6 +59,7 @@
       <div class="columns is-centered">
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title">MVPSNet: Fast Generalizable Multi-view Photometric Stereo</h1>
+          <h1 class="title is-3 publication-title">to appear ICCV2023</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="">Dongxu Zhao</a><sup>1</sup>,</span>
