--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="columns is-centered">
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title">MVPSNet: Fast Generalizable Multi-view Photometric Stereo</h1>
-          <h1 class="title is-3 publication-title">to appear ICCV2023</h1>
+          <h1 class="title is-5 publication-title">To appear in ICCV2023</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="">Dongxu Zhao</a><sup>1</sup>,</span>
@@ -175,6 +175,9 @@
           </p>
         </div>
         <img src="./static/images/fig3_experiment.png"
+                 class="interpolation-image"
+                 alt="Interpolate start reference image."/>
+        <img src="./static/images/table.png"
                  class="interpolation-image"
                  alt="Interpolate start reference image."/>
         <br/>
