--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <h3 class="title is-4">Results on DiLiGenT-MV</h3>
         <div class="content has-text-justified">
           <p>
-            MVPSNet achieves comparable results to STOA method while being fast and generalizable.
+            MVPSNet achieves comparable results to SOTA method while being fast and generalizable.
           </p>
         </div>
         <img src="./static/images/fig3_experiment.png"
