--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <h3 class="title is-4">Result on real-world capture</h3>
         <div class="content has-text-justified">
           <p>
-            Result of a real-world capture using a simple at-home setup: 
+            Result of an example of real-world capture using a simple at-home setup: 
             a user captures MVPS imagery by attaching a flash-light with 
             a string to the tripod to move lights in a circle around the 
             camera.
